--- a/index.html
+++ b/index.html
@@ -1,191 +1,104 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- 
         The head is where you provide meta data 
         and load in CSS and other assets
     -->
-    
+
     <!-- Search Engine Optimization (don't worry about it) -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
-    <meta
-        name="description"
-        content="My personal website"
-    />
+    <meta name="description" content="My personal website" />
 
     <!-- Change the favicon (tab icon) -->
     <link rel="icon" href="./img/favicon.ico" />
     <!-- Change the tab title -->
-    <title>My Personal Website</title>
+    <title>Leon Xin Durrenberger</title>
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
     <link href="./css/styles.css" rel="stylesheet" />
 </head>
+
 <body>
-    <!-- 
-        The body is where your content goes!  
-    -->
+    <div class="page-container">
+        <header class="d-flex justify-content-center header">
+            <ul class="nav">
+                <li class="nav-item nav-item-selected">
+                    <h2>about</h2>
+                </li>
+                <li class="nav-item">
+                    <h2><a href="project.html">projects</a></h2>
+                </li>
+                <li class="nav-item">
+                    <h2><a href="experience.html">experience</a></h2>
+                </li>
+                <li class="nav-item">
+                    <h2><a href="resume.html">resume</a></h2>
+                </li>
+                <li class="nav-item">
+                    <h2><a href="contact.html">contact</a></h2>
+                </li>
+            </ul>
+        </header>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-            <a class="navbar-brand" href="./index.html">Your Name</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#hero">Home</a>
+        <div class="body">
+            <div class="container body-container">
+                <img src="img\cool_pic.jpg" width="500px">
+                <div class="textbox">
+                    <h1>Hello!</h1>
+                    <p>My name is Leon Durrenberger, and I’m a software engineer based out of Los Angeles, California.
+                    </p>
+
+                    <p>My technical areas of focus include hardware engineering, data science, and machine learning.</p>
+
+                    <p>I graduated in May of 2022 from the University of Southern California, where I recieved a B.S. in
+                        Computer Science with a final GPA of 3.73.</p>
+
+                    <p>In my spare time, I love reading, producing music & playing piano, running, and pursuing eclectic
+                        side projects.</p>
+
+                    <p>Please feel free to check out my projects!</p>
+
+                    <p>-Leon</p>
+                </div>
+            </div>
+        </div>
+
+        <footer class="d-flex justify-content-center footer">
+            <div class="container footer-container">
+                <div>
+                    <p class="no-margins tiny-font-size">Website made from scratch :D</p>
+                </div>
+                <ul class="nav">
+                    <li class="social-button">
+                        <a href="https://www.instagram.com/leon.durrenberger/?hl=en">
+                            <img src="img\icons8-instagram-30.png">
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                    <li class="social-button">
+                        <a href="https://www.linkedin.com/in/leon-durrenberger-a718b7167/">
+                            <img src="img\icons8-linkedin-circled-30.png">
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#gallery">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                    <!-- You can link visitors to a PDF of your resume -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#resume">Resume</a>
+                    <li class="social-button">
+                        <a href="https://github.com/leon-xd">
+                            <img src="img\icons8-github-30.png">
+                        </a>
                     </li>
                 </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Front/top of the page -->
-    <section id="hero">
-        <div>
-            <div class="text">
-                <h1>I'm Name</h1>
-                <h4>Maker @ USC</h4>
-            </div>
-        </div>
-    </section>
-    
-    <!-- Everything about you!!! -->
-    <section id="about">
-        <div class="container">
-            <div id="blurb" class="row">
-                <div class="text-center offset-4 col-4">
-                    <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" class="img-fluid"/>
-                    <h2>Who am I?</h2>
-                    <p>I am awesome. Insert a blurb about yourself. Keep this short but sweet</p>
+                <div>
+                    <p class="no-margins tiny-font-size">© 2022</p>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <!-- List out your skills/what you do -->
-    <section id="skills">
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <img src="https://i.imgur.com/AWnfQqp.jpg" class="img-fluid" />
-                </div>
 
-                <div class="col-6">
-                    <h3>Soldering</h3>
-                    <p>I'm really good at soldering</p>
-                </div>
-            </div>
-        </div>
-    </section>
+        </footer>
+    </div>
 
-    <!-- Use this for a portfolio -->
-    <section id="gallery">
-        <div class="container">
-            <div class="text-center">
-                <h2>Portfolio</h2>
-                <p>Check out the cool stuff I made</p>
-            </div>
 
-            <div class="row">
-                <div class="col-4">
-                    <img src="https://viterbimakers.usc.edu/img/project-pictures/SpacePainter.jpg" class="img-fluid"/>
-                </div>
-                <div class="col-4">
-                    <img src="https://viterbimakers.usc.edu/img/project-pictures/SmartLock.jpg" class="img-fluid"/>
-                </div>
-                <div class="col-4">
-                    <img src="https://viterbimakers.usc.edu/img/project-pictures/MaskLock.JPG" class="img-fluid"/>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- How do people get in touch with you? -->
-    <section id="contact">
-        <div class="container">
-            <h2 class="text-center">Contact</h2>
-            <div class="row">
-                <div class="col-md-5 mx-auto">
-                    <p class="text-center">
-                        Here's how you can contact me
-                    </p>
-
-                    <!-- 
-                        GitHub doesn't allow you to host a server so
-                        you're going to need to use an external service
-                        like formspree.io to handle emails sent from
-                        your website. Or you can just link your visitors
-                        a mailto:your@email.com
-                    -->
-                    <form action="/" method="POST">
-                        <input
-                            type="text"
-                            name="name"
-                            placeholder="Your name"
-                            class="form-control"
-                        />
-                        <input
-                            type="text"
-                            name="_replyto"
-                            placeholder="your@email.com"
-                            class="form-control"
-                        />
-                        <textarea
-                            name="body"
-                            placeholder="Your message"
-                            class="form-control"
-                        ></textarea>
-                        <input
-                            type="submit"
-                            name="submit"
-                            value="Send"
-                            class="form-control btn-accent"
-                        />
-                    </form>
-                    <p class="text-center">
-                        or email 
-                        <a
-                            href="mailto:who-am-i@usc.edu"
-                            target="_blank"
-                            rel="noopener noreferrer"
-                        >
-                            who-am-i@usc.edu
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Show something at the bottom -->
-    <footer>
-        <div class="container">
-            <p>Made with <span role="img" aria-label="hearts">❤️💛❤️</span> by your name &copy; 2021</p>
-            <p><a href="#hero">Go back up</a></p>
-        </div>
-    </footer>
-
-    <!-- It's common practice to load JavaScript in last -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
-</html>
