--- a/index.html
+++ b/index.html
@@ -76,17 +76,19 @@
                 </div>
                 <ul class="nav">
                     <li class="social-button">
-                        <a href="https://www.instagram.com/leon.durrenberger/?hl=en">
+                        <a href="https://www.instagram.com/leon.durrenberger/?hl=en" target="_blank"
+                            rel="noopener noreferrer">
                             <img src="img\icons8-instagram-30.png">
                         </a>
                     </li>
                     <li class="social-button">
-                        <a href="https://www.linkedin.com/in/leon-durrenberger-a718b7167/">
+                        <a href="https://www.linkedin.com/in/leon-durrenberger-a718b7167/" target="_blank"
+                            rel="noopener noreferrer">
                             <img src="img\icons8-linkedin-circled-30.png">
                         </a>
                     </li>
                     <li class="social-button">
-                        <a href="https://github.com/leon-xd">
+                        <a href="https://github.com/leon-xd" target="_blank" rel="noopener noreferrer">
                             <img src="img\icons8-github-30.png">
                         </a>
                     </li>
