--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
     <script type="text/javascript">
         window.onload = function () {
             document.getElementById('contact-form').addEventListener('submit', function (event) {
+                event.preventDefault();
                 var response = grecpatcha.getResponse();
                 if (response.length === 0) {
                     document.getElemetById('captcha-form').style.display = 'block';
