--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,13 @@
     <link href="./css/styles.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
+    <script type="text/javascript">
+        var onloadCallback = function () {
+            grecaptcha.render('html_element', {
+                'sitekey': '6Ld0wLwhAAAAAMKhIPOWg8pzAeXbp8zAV1ISVYqi'
+            });
+        };
+    </script>
 
     <script type="text/javascript">
         (function () {
