Added resume section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <h2><a href="experience.html">experience</a></h2>
                 </li>
                 <li class="nav-item">
+                    <h2><a href="writing.html">writings</a></h2>
+                </li>
+                <li class="nav-item">
                     <h2><a href="resume.html">resume</a></h2>
                 </li>
                 <li class="nav-item">
@@ -57,7 +60,7 @@
                     <p>My technical areas of focus include hardware engineering, data science, and machine learning.</p>
 
                     <p>I graduated in May of 2022 from the University of Southern California, where I recieved a B.S. in
-                        Computer Science with a final GPA of 3.73.</p>
+                        Computer Science with a final GPA of 3.74.</p>
 
                     <p>In my spare time, I love reading, producing music & playing piano, running, and pursuing eclectic
                         side projects.</p>
