--- a/project.html
+++ b/project.html
@@ -37,6 +37,9 @@
                     <h2><a href="experience.html">experience</a></h2>
                 </li>
                 <li class="nav-item">
+                    <h2><a href="writing.html">writings</a></h2>
+                </li>
+                <li class="nav-item">
                     <h2><a href="resume.html">resume</a></h2>
                 </li>
                 <li class="nav-item">
