--- a/writing.html
+++ b/writing.html
@@ -16,48 +16,18 @@
     <!-- Change the favicon (tab icon) -->
     <link rel="icon" href="./img/favicon.ico" />
     <!-- Change the tab title -->
-    <title>My Personal Website</title>
+    <title>Leon Xin Durrenberger</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
     <link href="./css/styles.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-    </script>
-    </script>
-
-    <script type="text/javascript">
-        (function () {
-            emailjs.init('ijon4QgwSlE1G_6RA');
-        })();
-    </script>
-
-    <script type="text/javascript">
-        window.onload = function () {
-            document.getElementById('contact-form').addEventListener('submit', function (event) {
-                event.preventDefault();
-                emailjs.sendForm('service_9ctv8aa', 'template_gipefj4', this)
-                    .then(function () {
-                        document.getElementById('success-form').style.display = 'block';
-                        document.getElementById('submit-button').style.display = 'none';
-                        document.getElementById('error-form').style.display = 'none';
-
-                    }, function (error) {
-                        document.getElementById('error-form').style.display = 'block';
-                        document.getElementById('submit-button').style.display = 'none';
-                        document.getElementById('success-form').style.display = 'none';
-                    });
-
-
-            });
-        }
-    </script>
 </head>
 
 <body>
     <div class="page-container">
         <header class="d-flex justify-content-center header">
             <ul class="nav">
-                <li class="nav-item">
+                <li class="nav-item ">
                     <h2><a href="index.html">about</a></h2>
                 </li>
                 <li class="nav-item">
@@ -66,39 +36,21 @@
                 <li class="nav-item">
                     <h2><a href="experience.html">experience</a></h2>
                 </li>
-                <li class="nav-item">
-                    <h2><a href="writing.html">writings</a></h2>
+                <li class="nav-item nav-item-selected">
+                    <h2>writings</h2>
                 </li>
                 <li class="nav-item">
                     <h2><a href="resume.html">resume</a></h2>
                 </li>
-                <li class="nav-item nav-item-selected">
-                    <h2>contact</h2>
+                <li class="nav-item">
+                    <h2><a href="contact.html">contact</a></h2>
                 </li>
             </ul>
         </header>
 
 
         <div class="body">
-            <form id="contact-form" class="form-style" method="post">
-                <div class="form-container">
-                    <div class="centered-form">
-                        <h2>Contact Me!</h2>
-                    </div>
-                    <input type="text" name="name" placeholder="Name">
-                    <input type="email" name="email" placeholder="Email">
-                    <textarea name="message" placeholder="Message"></textarea>
-                    <div class="centered-form" id="submit-button">
-                        <input type="submit" value="Send">
-                    </div>
-                    <div id="success-form" class="centered-form">
-                        Sent!
-                    </div>
-                    <div id="error-form" class="centered-form">
-                        Error - please email leon.durrenberger@gmail.com instead!
-                    </div>
-                </div>
-            </form>
+            <h1>Coming Soon!</h1>
         </div>
 
         <footer class="d-flex justify-content-center footer">
@@ -133,4 +85,7 @@
 
         </footer>
     </div>
+
+
 </body>
+<script src="js\sidebar_control.js"></script>
